--- a/src/app/components/shared/chat-header/chat-header.component.scss
+++ b/src/app/components/shared/chat-header/chat-header.component.scss
@@ -20,7 +20,7 @@ h1 {
     height: 7rem;
     box-shadow: 0 6px 6px -2px #00000014;
     background-color: white;
-    padding: 2rem 0;
+    // padding: 2rem 0;
     margin-bottom: 1rem;
 
     .header-left {
